--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <section class="colored-section" id="title">
     <div class="container-fluid">
-      <!-- Nav Bar -->
+      <!--- Nav Bar --->
 
       <nav class="navbar navbar-expand-lg navbar-dark">
         <a class="navbar-brand" href="#">pokinder</a>
